# wfv-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_naive_vs_purged.py  leakage_demo.py
src/wfvkit/: __init__.py  evaluate.py  leakage.py  metrics.py  splits.py
tests/: test_evaluate.py  test_leakage.py  test_metrics.py  test_splits.py
