[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfvkit"
version = "0.1.8"
description = "Walk-forward validation utilities for time-series ML: splits, purge/embargo, horizon-aware leakage guards, and tiny evaluation helpers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mohsen Moghaddam" }]
keywords = ["walk-forward", "time-series", "ml", "cross-validation", "purged", "embargo", "finance", "leakage"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Mohsentinal/wfv-toolkit"
Repository = "https://github.com/Mohsentinal/wfv-toolkit"
Issues = "https://github.com/Mohsentinal/wfv-toolkit/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "build>=1.3", "numpy>=1.26"]
examples = ["numpy>=1.26"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
